k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: registry.gitlab.com/openculinary/frontend
        imagePullPolicy: Never
        name: frontend
        ports:
        - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      app: frontend
