k8s/frontend.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
    - command:
      image: localhost/frontend
      name: frontend
      imagePullPolicy: Never
  nodeSelector:
    app: frontend
