k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
      role: web
  template:
    metadata:
      labels:
        app: frontend
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/frontend
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
          - mountPath: /var/run
            name: var-run
          - mountPath: /var/cache/nginx
            name: var-cache-nginx
      volumes:
        - name: var-run
          emptyDir:
            medium: "Memory"
            sizeLimit: "4Mi"
        - name: var-cache-nginx
          emptyDir:
            medium: "Memory"
            sizeLimit: "128Mi"
