k8s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: crawler
      role: web
  template:
    metadata:
      labels:
        app: crawler
        role: web
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - image: registry.gitlab.com/openculinary/frontend
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
  replicas: 3
