k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  backend:
    serviceName: frontend-service
    servicePort: 80
